# tech-challgend-fiap-fase-1

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
data/: README.md
docs/: deploy_architecture.md  ml_canvas.md  model_card.md  monitoring_plan.md  video_star_script.md
docs/reports/: model_comparison.csv  model_comparison.md
models/: README.md
notebooks/: 01_eda_e_baselines.ipynb  01_eda_e_baselines.py  README.md
src/churn/: __init__.py  api.py  baseline.py  compare_models.py  config.py  data.py  download_data.py  features.py  logging_config.py  metrics.py  model.py  schema.py  train.py
tests/: test_api.py  test_schema.py  test_smoke.py
