[project]
name = "tech-challenge-churn"
version = "0.1.0"
description = "Rede neural MLP com pipeline end-to-end para previsao de churn em telecom."
readme = "README.md"
requires-python = ">=3.14.4,<3.15"
dependencies = [
    "fastapi>=0.115.0",
    "joblib>=1.4.2",
    "kagglehub>=1.0.0",
    "mlflow>=2.20.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.0",
    "scikit-learn>=1.7.0",
    "structlog>=24.4.0",
    "torch>=2.10.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
churn-download-data = "churn.download_data:main"
churn-generate-sample = "churn.data:main_generate_sample"
churn-train-baseline = "churn.baseline:main"
churn-train-mlp = "churn.train:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "LOG"]
ignore = [
    "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
